<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".view.fragments.SettingsFragment">

    <Switch
        android:id="@+id/temperature_metrick_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:showText="true"
        android:text="@string/show_temperature_in"
        android:textOff="@string/celsius"
        android:textOn="@string/farengheit"
        android:textSize="24sp" />

</LinearLayout>