<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="com.nikolaevdev.weatherapp.helper.Utils"/>
        <variable
            name="weather"
            type="com.nikolaevdev.weatherapp.model.pojo.SimpleWeather" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/item_background"
        android:minWidth="125dp"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context=".view.fragments.CurrentWeatherFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/weather_image"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:custom_src="@{weather.icon}" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/weather_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@{Utils.getName(weather)}"
                    android:textColor="#000000"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/weather_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:text="@{weather.description}"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/weather_temp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="0dp"
                    android:gravity="center"
                    android:show_temperature="@{weather}"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:textStyle="italic" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/pressure_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:minWidth="125dp"
                android:text="@string/pressure"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_pressure"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|start"
                android:text="@{Utils.getPressure(weather )}"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wind_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:minWidth="125dp"
                android:text="@string/wind_sppeed"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_wind_speed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|start"
                android:text="@{Utils.getWindSpeed(weather)}"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/humidity_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center|start"
                android:minWidth="125dp"
                android:text="@string/humidity"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_humidity"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:gravity="center|start"
                android:text="@{Utils.getHumidity(weather)}"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="2dp"
                android:gravity="center|start"
                android:minWidth="125dp"
                android:text="@string/sun_rise"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center|start"
                android:text="@{Utils.getHumanTime(weather.sunrise, weather.previousWeatherValues.sunrise)}"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:gravity="center|start"
                android:minWidth="125dp"
                android:text="@string/sun_set"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/weather_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:gravity="center|start"
                android:text="@{Utils.getHumanTime(weather.sunset,weather.previousWeatherValues.sunset)}"
                android:textColor="#000000"
                android:textSize="20sp"
                android:textStyle="italic" />

        </LinearLayout>
    </LinearLayout>
</layout>
